--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,10 +9,14 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "mambaforge-4.10"
+    python: "3.11"
 
 mkdocs:
   configuration: mkdocs.yml
-
-conda:
-  environment: environment.yml
+  
+python:
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - all
