--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: Unit Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["develop", "main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["develop", "main"]
 
 permissions:
   contents: read
