Improve keyword matching in exclude statements for pyproject.toml Bring back Python 3.10 and 3.11 Leave Python 3.9 in the mix for the future

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,9 +53,9 @@ all = ["scores[dev,tutorial]"]
 
 [tool.hatch.build]
 exclude = [
-    "tutorials/",
-    "docs/",
-    "tests/"
+    "/tutorials/",
+    "/docs/",
+    "/tests/"
 ]
 
 [tool.hatch.version]
