Updated pyproject.toml with rioxarray and rasterio for the tutorial configuration Manually tested with weightings noteboox

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ tutorial = [
     "jupyterlab",
     "matplotlib",
     "h5netcdf",
+    "rasterio",
+    "rioxarray"
 ]
 maintainer = ["build", "hatch"]
 all = ["scores[dev,tutorial]"]
