added warning for dm tests if there are NaNs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "xarray",
     "pandas",
     "scipy",
-    "bottleneck",
+    "bottleneck"
 ]
 
 [project.optional-dependencies]
