implement modified diebold mariano test (#22)
* implement modified diebold mariano test
* added dm test stat tutorial notebook
* Implement  the `acovf` function from `statsmodels`
* updated github actions to run tests on develop branch
* Add copyright from statsmodel
* Improve keyword matching in exclude statements for pyproject.toml
* added warning for dm tests if there are NaNs

---------

Co-authored-by: nicholas loveday <nicholas.loveday@bom.gov.au>
Co-authored-by: Harrison Cook <harrison.cook@bom.gov.au>
Co-authored-by: Tennessee Leeuwenburg <tennessee.leeuwenburg@bom.gov.au>

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: Unit Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["develop", "main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["develop", "main"]
 
 permissions:
   contents: read
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]    
+        python-version: ["3.9", "3.10", "3.11"]    
 
     steps:
     - uses: actions/checkout@v3
