--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ dev = [
     "black == 23.3.0",
     "mypy == 1.3.0",
     "pylint == 2.17.4",
+    "mkdocs",
+    "mkdocstrings[python]",
+    "dask"
 ]
 tutorial = [
     "jupyterlab",
