Tweaks to gitignore and pyproject.toml optional dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ build/
 src/scores.egg-info/
 tutorials/.ipynb_checkpoints/
 .vscode
+htmldocs/
+maintainernotes.md
+tutorials/auspopn.zip
+tutorials/analysis_grid.nc
+tutorials/forecast_grid.nc
