--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dev = [
     "black == 23.3.0",
     "mypy == 1.3.0",
     "pylint == 2.17.4",
-    "dask"
+    "dask",
+    "pandas-stubs"
 ]
 tutorial = [
     "jupyterlab",
