--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dev = [
     "mypy == 1.3.0",
     "pylint == 2.17.4",
     "dask",
+    "h5netcdf",
     "pandas-stubs"
 ]
 tutorial = [
@@ -78,3 +79,14 @@ warn_unused_configs = true
 
 [[tool.mypy.overrides]]
 ignore_missing_imports = true
+
+[tool.coverage.paths]
+source = ["/src/"]
+
+[tool.pytest.ini_options]
+addopts = [
+    '--cov-fail-under=98',
+    '--cov-report=html',
+    '--cov-report=term-missing',
+    '--junitxml=report.xml'
+]
