--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,3 +90,9 @@ addopts = [
     '--cov-report=term-missing',
     '--junitxml=report.xml'
 ]
+[tool.pylint.master]
+# https://github.com/PyCQA/pylint/issues/4081#issuecomment-778242554
+init-hook = 'import sys; sys.setrecursionlimit(3 * sys.getrecursionlimit())'
+
+[tool.pylint.FORMAT]
+max_line_length=120
