--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,9 @@ addopts = [
 [tool.pylint.master]
 # https://github.com/PyCQA/pylint/issues/4081#issuecomment-778242554
 init-hook = 'import sys; sys.setrecursionlimit(3 * sys.getrecursionlimit())'
+ignore-paths = [ 
+    'docs/'
+]
 
 [tool.pylint.FORMAT]
 max_line_length=120
