--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,15 +29,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
         pip install .[all]
     - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
-        coverage run -m pytest
-    - name: Report test coverage
-      run: |
-        coverage report -m
+        # editable is necessary as pytest will run against the installed
+        # package rather than the local files creating a coverage report of 0%
+        pip install -e .
+        pytest tests/ --cov=src/
     - name: Test tutorial notebooks with pytest
       run: |
         pytest --nbmake tutorials/
