86: run pre-commit on push

--- a/.github/workflows/run-pre-commit.yml
+++ b/.github/workflows/run-pre-commit.yml
@@ -3,6 +3,8 @@
 name: Run pre-commit
 
 on:
+  push:
+    branches: ["develop", "main", "[0-9]+-*"]
   pull_request:
     branches: ["develop", "main", "[0-9]+-*"]
 
