--- a/.github/workflows/run-pre-commit.yml
+++ b/.github/workflows/run-pre-commit.yml
@@ -26,4 +26,4 @@ jobs:
         pip install .[all]
     - name: pre-commit checks
       run: |
-        pre-commit run --all
+        pre-commit run --all-files
