86: pre-commit runs on all files (#101)
* 86: pre-commit runs on all files

* 86: run pre-commit on push

* 86: update pylint version

* 86: pylint version and scoring >9.8

* Update .github/workflows/run-pre-commit.yml

Co-authored-by: Aidan Griffiths <58012338+aidanjgriffiths@users.noreply.github.com>
Signed-off-by: tennlee <134973832+tennlee@users.noreply.github.com>

* Update .github/workflows/run-pre-commit.yml

Co-authored-by: Aidan Griffiths <58012338+aidanjgriffiths@users.noreply.github.com>
Signed-off-by: tennlee <134973832+tennlee@users.noreply.github.com>

* Update docs/conf.py

Co-authored-by: Aidan Griffiths <58012338+aidanjgriffiths@users.noreply.github.com>
Signed-off-by: tennlee <134973832+tennlee@users.noreply.github.com>

---------

Signed-off-by: tennlee <134973832+tennlee@users.noreply.github.com>
Co-authored-by: tennlee <134973832+tennlee@users.noreply.github.com>
Co-authored-by: Aidan Griffiths <58012338+aidanjgriffiths@users.noreply.github.com>

--- a/.github/workflows/run-pre-commit.yml
+++ b/.github/workflows/run-pre-commit.yml
@@ -26,4 +26,4 @@ jobs:
         pip install .[all]
     - name: pre-commit checks
       run: |
-        pre-commit run
+        pre-commit run --all-files
