--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dev = [
     "pre-commit",
     "black == 23.3.0",
     "mypy == 1.3.0",
-    "pylint == 2.17.4",
+    "pylint == 3.0.1",
     "dask",
     "h5netcdf",
     "pandas-stubs",
@@ -107,12 +107,16 @@ addopts = [
 [tool.pylint.master]
 # https://github.com/PyCQA/pylint/issues/4081#issuecomment-778242554
 init-hook = 'import sys; sys.setrecursionlimit(3 * sys.getrecursionlimit())'
+fail-under=9.8
 ignore-paths = [
     'docs/'
 ]
 
+[tool.pylint.DESIGN]
+max-args=10
+
 [tool.pylint.FORMAT]
-max_line_length=120
+max-line-length=120
 
 [tool.pylint.messages_control]
 good_names=['df','da','x','y','z','i','j','k','ae']
