--- a/.github/workflows/run-pre-commit.yml
+++ b/.github/workflows/run-pre-commit.yml
@@ -26,4 +26,6 @@ jobs:
         pip install .[all]
     - name: pre-commit checks
       run: |
-        pre-commit run --all-files
+        pre-commit run black --all-files
+        pre-commit run isort --all-files
+        pre-commit run pylint --all-files
