--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,7 +109,7 @@ addopts = [
     '--ignore=tutorials/Root_Mean_Squared_Error.ipynb',
     '--ignore=tutorials/Weighting_Results.ipynb',
     '--ignore=tutorials/Mean_Absolute_Error.ipynb',
-    '--ignore=tutorials/Bias.ipynb'
+    '--ignore=tutorials/Additive_and_multiplicative_bias.ipynb'
 ]
 
 [tool.pylint.master]
