Add type: ignore messages where mypy is misreporting issues or no clear resolution is available

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,9 @@ line-length = 120
 warn_return_any = true
 warn_unused_configs = true
 
-#ignore_missing_imports = true
+[[tool.mypy.overrides]]
+module = "scipy.*"
+ignore_missing_imports = true
 
 [tool.coverage.paths]
 source = ["/src/"]
