Fix up remaining issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,10 @@ warn_unused_configs = true
 module = "scipy.*"
 ignore_missing_imports = true
 
+[[tool.mypy.overrides]]
+module = "sklearn.*"
+ignore_missing_imports = true
+
 [tool.coverage.paths]
 source = ["/src/"]
 
