--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dev = [
     "black == 23.3.0",
     "mypy == 1.3.0",
     "pylint == 3.0.1",
+    "bandit == 1.7.8",
     "dask",
     "h5netcdf",
     "pandas-stubs",
