Quantile score had been improperly referenced in the api docs so wasn't building correctly Updated the requirements file for maintainer version to include all tools needed for building the docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,10 @@ maintainer = ["build",
               "sphinx",
               "myst-parser",
               "sphinx-book-theme",
+              "nbsphinx",
+              "sphinx_gallery",
               "twine",
+              "pandoc",
               "pip-tools",
 ]
 all = ["scores[dev,tutorial]"]
