[experimental feature] Fractions Skill Score using rust (initial commit) - Rust implementation can be found in rust/src - Some examples in rust/examples - Also contains example implementations using numpy and numba

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
         language: system
         types: [python]
         stages: [pre-commit]
+        exclude: ^rust/examples
   - repo: https://github.com/PyCQA/isort
     rev: 5.11.5
     hooks:
