Add dask to the tutorial requirements as it is commonly useful

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,8 @@ tutorial = [
     "h5netcdf",
     "rasterio",
     "rioxarray",
-    "plotly"
+    "plotly",
+    "dask"
 ]
 maintainer = ["build",
               "hatch",
