Update the maintainer requirements to include ipywidgets to improve plotly rendering for readthedocs Update the maintainer notes with a handy reference command for working with forks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ maintainer = ["build",
               "sphinx-book-theme",
               "nbsphinx",
               "sphinx_gallery",
+              "ipywidgets",
               "twine",
               "pandoc",
               "pip-tools",
