first pass at twCRPS tutorial

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,9 @@ tutorial = [
     "rasterio",
     "rioxarray",
     "plotly",
-    "dask"
+    "dask",
+    "gcsfs",
+    "zarr"
 ]
 maintainer = ["build",
               "hatch",
