--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,21 +10,21 @@ authors = [
 ]
 description = """\
 Scores is a package containing mathematical functions \
-for the verification, evaluation and optimisation of model outputs and predictions.
+for the verification, evaluation and optimisation of forecasts, predictions or models.
 """
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "xarray",
-    "pandas",
-    "scipy",
-    "bottleneck",
-    "scikit-learn",
+    "xarray ~= 2024.1",
+    "pandas ~= 2.0",
+    "scipy ~= 1.1",
+    "bottleneck ~= 1.3",
+    "scikit-learn ~= 1.4",
 ]
 
 [project.optional-dependencies]
@@ -48,7 +48,8 @@ tutorial = [
     "h5netcdf",
     "rasterio",
     "rioxarray",
-    "plotly"
+    "plotly",
+    "dask"
 ]
 maintainer = ["build",
               "hatch",
@@ -57,6 +58,7 @@ maintainer = ["build",
               "sphinx-book-theme",
               "nbsphinx",
               "sphinx_gallery",
+              "ipywidgets",
               "twine",
               "pandoc",
               "pip-tools",
@@ -64,7 +66,8 @@ maintainer = ["build",
 all = ["scores[dev,tutorial]"]
 
 [project.urls]
-"Homepage" = "http://www.bom.gov.au"
+"Repository" = "https://github.com/nci/scores" 
+"Documentation" = "https://scores.readthedocs.io/en/stable/"
 
 [tool.hatch.build]
 exclude = [
