--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,6 @@ repos:
         name: pytest
         entry: pytest tests/ --cov=src/scores --cov-report term-missing
         language: system
-        stages: [push]
+        stages: [pre-push]
         always_run: true
         pass_filenames: false
