--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,8 @@ dependencies = [
 override = true  # This is required to activate the build hook.
 
 [tool.hatch.metadata.hooks.custom.config]
+# The pinned versions of these dependencies will be subsituted during package builds.
+# Pinned versions will only be substitued for packages that are already in this package's dependencies list.
 pinned_dependencies = [
     "xarray ~= 2024.1",
     "pandas ~= 2.0",
