--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,13 +19,7 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
-dependencies = [
-    "xarray",
-    "pandas",
-    "scipy",
-    "bottleneck",
-    "scikit-learn",
-]
+dependencies = ["xarray", "pandas", "scipy", "bottleneck", "scikit-learn"]
 
 [project.optional-dependencies]
 dev = [
@@ -76,6 +70,23 @@ exclude = [
     "/tutorials/",
     "/docs/",
     "/tests/"
+]
+dependencies = [
+    "tomlkit",
+]
+
+[tool.hatch.build.hooks.custom]
+override = true  # This is required to activate the build hook.
+
+[tool.hatch.metadata.hooks.custom.config]
+# The pinned versions of these dependencies will be subsituted during package builds.
+# Pinned versions will only be substitued for packages that are already in this package's dependencies list.
+pinned_dependencies = [
+    "xarray ~= 2024.1",
+    "pandas ~= 2.0",
+    "scipy ~= 1.1",
+    "bottleneck ~= 1.3",
+    "scikit-learn ~= 1.4",
 ]
 
 [tool.hatch.version]
