Pylint version updated No static analysis error messages displayed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,3 +154,6 @@ max-line-length=150  # Deliberately "too long" to avoid disagreements with black
 
 [tool.pylint.messages_control]
 good-names=['df','da','x','y','z','i','j','k','ae']  # pylint: disable=E0015
+disable = [
+    "too-many-positional-arguments",
+]
