--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ dev = [
     "pytest-cov",
     "pre-commit",
     "black == 24.1.0",
-    "mypy == 1.3.0",
-    "pylint == 3.0.1",
+    "mypy == 1.13.0",
+    "pylint == 3.3.1",
     "bandit == 1.7.8",
     "dask",
     "h5netcdf",
@@ -154,3 +154,6 @@ max-line-length=150  # Deliberately "too long" to avoid disagreements with black
 
 [tool.pylint.messages_control]
 good-names=['df','da','x','y','z','i','j','k','ae']  # pylint: disable=E0015
+disable = [
+    "too-many-positional-arguments",
+]
