--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
-dependencies = ["xarray", "pandas", "scipy", "bottleneck", "scikit-learn"]
+dependencies = ["xarray", "pandas", "scipy", "bottleneck"]
 
 [project.optional-dependencies]
 dev = [
@@ -84,9 +84,8 @@ override = true  # This is required to activate the build hook.
 pinned_dependencies = [
     "xarray ~= 2024.1",
     "pandas ~= 2.0",
-    "scipy ~= 1.1",
-    "bottleneck ~= 1.3",
-    "scikit-learn ~= 1.4",
+    "scipy ~= 1.13",
+    "bottleneck ~= 1.3"
 ]
 
 [tool.hatch.version]
@@ -107,7 +106,6 @@ module = "scipy.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
-module = "sklearn.*"
 ignore_missing_imports = true
 
 [tool.coverage.paths]
