--- a/pyproject.toml
+++ b/pyproject.toml
@@ -152,3 +152,21 @@ good-names=['df','da','x','y','z','i','j','k','ae']  # pylint: disable=E0015
 disable = [
     "too-many-positional-arguments",
 ]
+
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.pypi-dependencies]
+scores = { path = ".", editable = true }
+
+[tool.pixi.environments]
+default = { solve-group = "default" }
+all = { features = ["all", "dev", "tutorial"], solve-group = "default" }
+dev = { features = ["dev"], solve-group = "default" }
+maintainer = { features = ["maintainer"], solve-group = "default" }
+tutorial = { features = ["tutorial"], solve-group = "default" }
+
+[tool.pixi.feature.dev.tasks]
+tests = { cmd = "pytest", cwd = "./" }
+pre-commit = "pre-commit"
