--- a/pyproject.toml
+++ b/pyproject.toml
@@ -162,11 +162,38 @@ scores = { path = ".", editable = true }
 
 [tool.pixi.environments]
 default = { solve-group = "default" }
-all = { features = ["all", "dev", "tutorial"], solve-group = "default" }
+all = { features = ["all"], solve-group = "default" }
 dev = { features = ["dev"], solve-group = "default" }
 maintainer = { features = ["maintainer"], solve-group = "default" }
 tutorial = { features = ["tutorial"], solve-group = "default" }
 
+# -------------------------------------------------------------------------------------------------
+#  pixi tasks defined below
+# -------------------------------------------------------------------------------------------------
+# Tasks are grouped by "feature", a feature is mapped to collection of base and extra
+# dependencies.  For scores, the environments directly.
+#
+# Examples:
+#    - pre-canned task 1  |  `pixi run make-docs`        |  runs in environment "maintainer"
+#    - pre-canned task 2  |  `pixi run pre-commit`       |  runs in environment "dev"
+#    - custom task        |  `pixi run -e all python3 -m |  runs in environment "all"
+#
+# To see the exact packages in an environment run: `pixi list -x -e <env>
+#
+# -------------------------------------------------------------------------------------------------
+
 [tool.pixi.feature.dev.tasks]
-tests = { cmd = "pytest", cwd = "./" }
-pre-commit = "pre-commit"
+# run pre-commit on all files
+pre-commit = "pre-commit run --all-files"
+# test source code
+pytest-src = "pytest tests/ --cov=src/"
+# test notebooks
+pytest-nb = "pytest --nbmake tutorials/"
+
+[tool.pixi.feature.maintainer.tasks]
+# make documents & render tutorials
+make-docs = "sphinx-build -b html docs/ htmldocs"
+
+[tool.pixi.feature.tutorial.tasks]
+# launch jupyter lab
+run-jupyerlab = "jupyter lab --notebook-dir=./tutorial"
