Update dependency version pins for xarray

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ override = true  # This is required to activate the build hook.
 # The pinned versions of these dependencies will be subsituted during package builds.
 # Pinned versions will only be substitued for packages that are already in this package's dependencies list.
 pinned_dependencies = [
-    "xarray ~= 2024.1",
+    "xarray >= 2024.1"  # xarray follows calver rather than semver, so using >= is the best we can do
     "pandas ~= 2.0",
     "scipy ~= 1.13",
     "bottleneck ~= 1.3"
