--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,7 +42,7 @@ jobs:
         # editable is necessary as pytest will run against the installed
         # package rather than the local files creating a coverage report of 0%
         pip install -e .
-        pip uninstall dask
+        pip uninstall dask -y
         pytest tests/ --cov=src/                
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.3.0
