--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[all]
-    - name: Test with pytest
+    - name: Test with pytest, with dask installed
       run: |
         # editable is necessary as pytest will run against the installed
         # package rather than the local files creating a coverage report of 0%
@@ -37,6 +37,13 @@ jobs:
     - name: Test tutorial notebooks with pytest
       run: |
         pytest --nbmake tutorials/
+    - name: Test again with without dask installed
+      run: |
+        # editable is necessary as pytest will run against the installed
+        # package rather than the local files creating a coverage report of 0%
+        pip install -e .
+        pip uninstall dask -y
+        pytest tests/ 
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.3.0
       with:
