--- a/.github/workflows/run-pre-commit.yml
+++ b/.github/workflows/run-pre-commit.yml
@@ -11,21 +11,20 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-          python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install .[all]
-    - name: pre-commit checks
-      run: |
-        pre-commit run black --all-files
-        pre-commit run isort --all-files
-        pre-commit run pylint --all-files
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[dev]
+      - name: pre-commit checks
+        run: |
+          pre-commit run black --all-files
+          pre-commit run isort --all-files
+          pre-commit run pylint --all-files
