--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
-dependencies = ["xarray", "pandas", "scipy", "bottleneck"]
+dependencies = ["xarray", "pandas", "scipy", "bottleneck", "numba"]
 
 [project.optional-dependencies]
 dev = [
@@ -82,10 +82,11 @@ override = true  # This is required to activate the build hook.
 # The pinned versions of these dependencies will be subsituted during package builds.
 # Pinned versions will only be substitued for packages that are already in this package's dependencies list.
 pinned_dependencies = [
+    "python <= 3.13",
     "xarray >= 2024.1",  # xarray follows calver rather than semver, so using >= is the best we can do
     "pandas ~= 2.0",
     "scipy ~= 1.13",
-    "bottleneck ~= 1.3"
+    "bottleneck ~= 1.3",
 ]
 
 [tool.hatch.version]
