--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,27 +28,28 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[all]
-    - name: Test with pytest, with dask installed
+    - name: Test with pytest, with dask and numba installed
       run: |
         # editable is necessary as pytest will run against the installed
         # package rather than the local files creating a coverage report of 0%
         pip install -e .
         pytest tests/ --cov=src/
-    - name: Test tutorial notebooks with pytest
-      run: |
-        pytest --nbmake tutorials/
-    - name: Test again with without dask installed
-      run: |
-        # editable is necessary as pytest will run against the installed
-        # package rather than the local files creating a coverage report of 0%
-        pip install -e .
-        pip uninstall dask -y
-        pytest tests/ 
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.3.0
       with:
         flag-name: run-${{ join(matrix.*, '-') }}
         parallel: true
+    - name: Test tutorial notebooks with pytest
+      run: |
+        pytest --nbmake tutorials/
+    - name: Test again with without dask and numba installed
+      run: |
+        # editable is necessary as pytest will run against the installed
+        # package rather than the local files creating a coverage report of 0%
+        pip install -e .
+        pip uninstall dask -y
+        pip uninstall numba -y
+        pytest tests/ 
   finish:
     needs: build
     runs-on: ubuntu-latest
